--- a/Price Predictor Notebook.ipynb
+++ b/Price Predictor Notebook.ipynb
@@ -491,7 +491,7 @@
     "pd.DataFrame( data = {\n",
     "    'Model': ['Random Forest', 'Linear Regression'],\n",
     "    'MAE': [rf_mae, lr_mae],\n",
-    "    'MPE': [rf_mpe, lr_mpe],\n",
+    "    'MAPE': [rf_mpe, lr_mpe],\n",
     "    'R²':[rf_r2, lr_r2]})"
    ]
   },
