--- a/Loan Default Prediction Notebook.ipynb
+++ b/Loan Default Prediction Notebook.ipynb
@@ -433,6 +433,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <u>𝐍𝐎𝐓𝐄:</u>\n",
+    "- **Exceptional Performance:**  \n",
+    "      The Random Forest Classifier achieves outstanding performance across all metrics.\n",
+    "\n",
+    "- **Near-Perfect Accuracy:**  \n",
+    "      The model achieves an impressive **accuracy of 99.0%.**\n",
+    "\n",
+    "- **Well-Balanced Precision and Recall:**  \n",
+    "      The model has a **high precision (96.0%) and recall (98.0%)**, indicating that it is effective in both avoiding false positives and detecting true positives.\n",
+    "     \n",
+    "- **Excellent F1 Score and ROC-AUC:**  \n",
+    "      **The F1 score (97.0%) and ROC-AUC (99.0%)** confirm that the model has a **great balance between precision and recall** and is highly effective in distinguishing between classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### CONFUSION MATRIX, ROC-AUC AND CALIBRATION CURVE"
    ]
   },
@@ -488,6 +506,18 @@
     "\n",
     "plt.tight_layout(pad=0.2)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <u>𝐍𝐎𝐓𝐄:</u>\n",
+    "- The Random Forest classifier demonstrates a **high level of accuracy** in predicting **both retained and churned customers**, **with minimal misclassifications.** \n",
+    "\n",
+    "- **The ROC curve's AUC value of 99%** suggests the **model's exceptional performance** in distinguishing between retained and churned customers.\n",
+    "\n",
+    "- **The calibration curve** indicates that the predicted probabilities are **well-calibrated**, (The blue line closely follows the perfect calibration line (orange dashed line)) and accurately reflect the true likelihood of customer churn, making the model **reliable for predicting customer churn.**\n"
    ]
   },
   {
