--- a/Price Predictor Notebook.ipynb
+++ b/Price Predictor Notebook.ipynb
@@ -496,6 +496,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <u>𝐍𝐎𝐓𝐄:</u>\n",
+    "- The Random Forest Regressor's better performance in terms of MAE and MAPE suggests that it is a more accurate and reliable model for predicting the target variable.\n",
+    "\n",
+    "     - **Better Performance of Random Forest Regressor:**  \n",
+    "         The Random Forest Regressor outperforms Linear Regression in terms of MAE and MAPE.\n",
+    "\n",
+    "     - **Lower MAE:**  \n",
+    "         The Random Forest Regressor has a lower MAE (0.2384) compared to Linear Regression (0.3123), indicating that it is better at predicting the target variable.\n",
+    "\n",
+    "     - **Lower MAPE:**  \n",
+    "         The Random Forest Regressor also has a lower MAPE (0.0208) compared to Linear Regression (0.0273), indicating that it is better at predicting the target variable in terms of percentage error.\n",
+    "         \n",
+    "     - **Similar R²:**  \n",
+    "         Both models have the same R² value (0.8798), indicating that they explain the same amount of variance in the target variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -524,6 +544,14 @@
     "ax[0].set_title(\"RANDOM FOREST REGRESSION PLOT\")\n",
     "ax[1].set_title(\"LINEAR REGRESSION PLOT\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <u>𝐍𝐎𝐓𝐄:</u>\n",
+    "- **The Random Forest Regression model** appears to capture more complex patterns in the data, as indicated by the **tighter clustering** of data points around the regression line."
    ]
   },
   {
